# triqler

./: .gitignore  CHANGELOG  README.md  README.rst  pyproject.toml  run_test.bat  run_test.sh  run_triqler.py  setup.py
.github/workflows/: auto_release.yml  publish_release.yml
admin/: release_checklist.txt
example/: iPRG2016_ref.proteins.1vs2.tsv  iPRG2016_ref.proteins.1vs3.tsv  iPRG2016_ref.proteins.2vs3.tsv  iPRG2016_ref.tsv.pqr.tsv
example/dia_example/: info.txt  log.txt  proteins.tsv  run.sh
tests/system_tests/: compare_tables.py
tests/unit_tests/: test_pgm.py
tests/unit_tests/convert/: test_percolator.py
triqler/: __init__.py  __main__.py  convolution_dp.py  diff_exp.py  hyperparameters.py  multiprocessing_pool.py  parsers.py  percolator.py  pgm.py  qvality.py  triqler.py  version.py
triqler/convert/: __main__.py  diann.py  dinosaur.py  helpers.py  maxquant.py  normalize_intensities.py  percolator.py  quandenser.py
triqler/distribution/: __main__.py  plot_hyperparameter_fits.py  plot_posteriors.py
