[tool.poetry]
name = "triqler"
version = "0.7.2"
description = "Triqler: TRansparent Identification-Quantification-Linked Error Rates"
authors = ["Matthew The <matthew.the@tum.de>", "Patrick Truong <patrick.truong@scilifelab.se>"]
license= "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/statisticalbiotechnology/triqler"
repository = "https://github.com/statisticalbiotechnology/triqler"
keywords = ["mass spectrometry", "missing values", "proteomics", "quantification"]
include = [
  "LICENSE",
]
#build = "build.py" # this creates platform and python version specific packages when running poetry build. Not necessary here since we do not have compiled code, e.g. cython

[tool.poetry.scripts]
triqler = 'triqler.triqler:main'

dinosaur2triqler = 'triqler.convert.dinosaur:main'
maxquant2triqler = 'triqler.convert.maxquant:main'
quandenser2triqler = 'triqler.convert.quandenser:main'
diann2triqler = 'triqler.convert.diann:main'

plot_hyperparameter_fits = 'triqler.distribution.plot_hyperparameter_fits:main'
plot_posteriors = 'triqler.distribution.plot_posteriors:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.3"
scipy = "^1.9.1"
threadpoolctl = "^3.1.0"
pandas = ">=1.4.0"
job-pool = "^0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
